--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,17 @@
 /*@font-face {
     font-family: theBirds;
   src: url(../css/THEBIRDS.TTF);
-}
-h1{
-  font-family: theBirds;
-  font-size: 72px
 }*/
-body {
+h1{
+  font-family: Times New Roman;
+  font-size: 72px
+}
+/*body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 18px;
     line-height: 32px;
     background: #ffffff;
-}
+}*/
 .container{
   margin-bottom: 40px;
 }
